# a11y-mcp

./: README.md  pyproject.toml
a11ymcp/: __init__.py  __main__.py  config.py  main.py  multi_entry.py
a11ymcp/tools/: __init__.py  analyze.py  check.py  fix.py
